Fixes #31502 - Add salt-plugin to proxy-answers

--- a/config/foreman-proxy-content-answers.yaml
+++ b/config/foreman-proxy-content-answers.yaml
@@ -31,6 +31,7 @@ foreman_proxy::plugin::discovery: false
 foreman_proxy::plugin::dns::infoblox: false
 foreman_proxy::plugin::openscap: false
 foreman_proxy::plugin::remote_execution::ssh: false
+foreman_proxy::plugin::salt: false
 foreman_proxy::plugin::shellhooks: false
 puppet:
   server: true
